--- a/db.bib
+++ b/db.bib
@@ -2484,6 +2484,18 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@inproceedings{ma-ganchev-weiss:2018:EMNLP,
+ address = {Brussels, Belgium},
+ author = {Ma, Ji  and  Ganchev, Kuzman  and  Weiss, David},
+ booktitle = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
+ month = {October-November},
+ pages = {4902--4908},
+ publisher = {Association for Computational Linguistics},
+ title = {State-of-the-art Chinese Word Segmentation with Bi-LSTMs},
+ url = {http://www.aclweb.org/anthology/D18-1529},
+ year = {2018}
+}
+
 @inproceedings{ma-hovy:2017:I17-1,
  abstract = {In this paper, we propose a probabilistic parsing model that defines a proper
 conditional probability distribution over non-projective
