--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2168,6 +2168,15 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@inproceedings{ma-ganchev-weiss:2018:EMNLP,
+ author = {Ma, Ji  and  Ganchev, Kuzman  and  Weiss, David},
+ booktitle = {Proc. of EMNLP-2018},
+ publisher = {ACL},
+ title = {State-of-the-art Chinese Word Segmentation with Bi-LSTMs},
+ url = {http://www.aclweb.org/anthology/D18-1529},
+ year = {2018}
+}
+
 @inproceedings{ma-hovy:2017:I17-1,
  abstract = {In this paper, we propose a probabilistic parsing model that defines a proper
 conditional probability distribution over non-projective
