--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1915,6 +1915,14 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@inproceedings{ma-ganchev-weiss:2018:EMNLP,
+ author = {Ma, Ji  and  Ganchev, Kuzman  and  Weiss, David},
+ booktitle = {Proc. of EMNLP},
+ title = {State-of-the-art Chinese Word Segmentation with Bi-LSTMs},
+ url = {http://www.aclweb.org/anthology/D18-1529},
+ year = {2018}
+}
+
 @inproceedings{ma-hovy:2016:P16-1,
  author = {Ma, Xuezhe  and  Hovy, Eduard},
  booktitle = {Proc. of ACL},
