--- a/db.bib
+++ b/db.bib
@@ -4554,3 +4554,15 @@ Beam Search},
  year = {2013}
 }
 
+@inproceedings{zhuo-EtAl:2016:P16-1,
+ address = {Berlin, Germany},
+ author = {Zhuo, Jingwei  and  Cao, Yong  and  Zhu, Jun  and  Zhang, Bo  and  Nie, Zaiqing},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {August},
+ pages = {1413--1423},
+ publisher = {Association for Computational Linguistics},
+ title = {Segment-Level Sequence Modeling using Gated Recursive Semi-Markov Conditional Random Fields},
+ url = {http://www.aclweb.org/anthology/P16-1134},
+ year = {2016}
+}
+
