--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3465,3 +3465,11 @@ Beam Search},
  year = {2013}
 }
 
+@inproceedings{zhuo-EtAl:2016:P16-1,
+ author = {Zhuo, Jingwei  and  Cao, Yong  and  Zhu, Jun  and  Zhang, Bo  and  Nie, Zaiqing},
+ booktitle = {Proc. of ACL},
+ title = {Segment-Level Sequence Modeling using Gated Recursive Semi-Markov Conditional Random Fields},
+ url = {http://www.aclweb.org/anthology/P16-1134},
+ year = {2016}
+}
+
