--- a/db.bib
+++ b/db.bib
@@ -2011,6 +2011,18 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2018}
 }
 
+@inproceedings{kalchbrenner-grefenstette-blunsom:2014:P14-1,
+ address = {Baltimore, Maryland},
+ author = {Kalchbrenner, Nal  and  Grefenstette, Edward  and  Blunsom, Phil},
+ booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {June},
+ pages = {655--665},
+ publisher = {Association for Computational Linguistics},
+ title = {A Convolutional Neural Network for Modelling Sentences},
+ url = {http://www.aclweb.org/anthology/P14-1062},
+ year = {2014}
+}
+
 @inproceedings{kazama-torisawa:2008:ACLMain,
  address = {Columbus, Ohio},
  author = {Kazama, Jun'ichi  and  Torisawa, Kentaro},
