--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1783,6 +1783,15 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2018}
 }
 
+@inproceedings{kalchbrenner-grefenstette-blunsom:2014:P14-1,
+ author = {Kalchbrenner, Nal  and  Grefenstette, Edward  and  Blunsom, Phil},
+ booktitle = {Proc. of ACL-2014},
+ publisher = {ACL},
+ title = {A Convolutional Neural Network for Modelling Sentences},
+ url = {http://www.aclweb.org/anthology/P14-1062},
+ year = {2014}
+}
+
 @inproceedings{kazama-torisawa:2008:ACLMain,
  author = {Kazama, Jun'ichi  and  Torisawa, Kentaro},
  booktitle = {Proc. of ACL-08: HLT},
