--- a/db.bib
+++ b/db.bib
@@ -3958,6 +3958,18 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {2015}
 }
 
+@inproceedings{wang-chang:2016:P16-1,
+ address = {Berlin, Germany},
+ author = {Wang, Wenhui  and  Chang, Baobao},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {August},
+ pages = {2306--2315},
+ publisher = {Association for Computational Linguistics},
+ title = {Graph-based Dependency Parsing with Bidirectional LSTM},
+ url = {http://www.aclweb.org/anthology/P16-1218},
+ year = {2016}
+}
+
 @inproceedings{wang-EtAl:2011:IJCNLP-2011,
  address = {Chiang Mai, Thailand},
  author = {Wang, Yiou  and  Kazama, Jun'ichi  and  Tsuruoka, Yoshimasa  and  Chen, Wenliang  and  Zhang, Yujie  and  Torisawa, Kentaro},
