--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3101,6 +3101,14 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  year = {2009}
 }
 
+@inproceedings{wang-chang:2016:P16-1,
+ author = {Wang, Wenhui  and  Chang, Baobao},
+ booktitle = {Proc. of ACL},
+ title = {Graph-based Dependency Parsing with Bidirectional LSTM},
+ url = {http://www.aclweb.org/anthology/P16-1218},
+ year = {2016}
+}
+
 @inproceedings{wang-EtAl:2011:IJCNLP-2011,
  author = {Wang, Yiou  and  Kazama, Jun'ichi  and  Tsuruoka, Yoshimasa  and  Chen, Wenliang  and  Zhang, Yujie  and  Torisawa, Kentaro},
  booktitle = {IJCNLP-2011},
