--- a/db.bib
+++ b/db.bib
@@ -738,6 +738,18 @@ place on the official test sets.},
  year = {2006}
 }
 
+@inproceedings{cross-huang:2016:EMNLP2016,
+ address = {Austin, Texas},
+ author = {Cross, James  and  Huang, Liang},
+ booktitle = {Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+ month = {November},
+ pages = {1--11},
+ publisher = {Association for Computational Linguistics},
+ title = {Span-Based Constituency Parsing with a Structure-Label System and Provably Optimal Dynamic Oracles},
+ url = {https://aclweb.org/anthology/D16-1001},
+ year = {2016}
+}
+
 @inproceedings{damonte-cohen-satta:2017:EACLlong,
  abstract = {Abstract Meaning Representation (AMR) is a semantic representation for natural
 language that embeds annotations related to traditional tasks such as named
