--- a/shortdb.bib
+++ b/shortdb.bib
@@ -634,6 +634,15 @@ place on the official test sets.},
  year = {2006}
 }
 
+@inproceedings{cross-huang:2016:EMNLP2016,
+ author = {Cross, James  and  Huang, Liang},
+ booktitle = {Proc. of EMNLP-2016},
+ publisher = {ACL},
+ title = {Span-Based Constituency Parsing with a Structure-Label System and Provably Optimal Dynamic Oracles},
+ url = {https://aclweb.org/anthology/D16-1001},
+ year = {2016}
+}
+
 @inproceedings{damonte-cohen-satta:2017:EACLlong,
  abstract = {Abstract Meaning Representation (AMR) is a semantic representation for natural
 language that embeds annotations related to traditional tasks such as named
