--- a/db.bib
+++ b/db.bib
@@ -3839,6 +3839,22 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2003}
 }
 
+@inproceedings{TjongKimSang:2000:ICS:1117601.1117631,
+ acmid = {1117631},
+ address = {Stroudsburg, PA, USA},
+ author = {Tjong Kim Sang, Erik F. and Buchholz, Sabine},
+ booktitle = {Proceedings of the 2Nd Workshop on Learning Language in Logic and the 4th Conference on Computational Natural Language Learning - Volume 7},
+ doi = {10.3115/1117601.1117631},
+ location = {Lisbon, Portugal},
+ numpages = {6},
+ pages = {127--132},
+ publisher = {Association for Computational Linguistics},
+ series = {ConLL '00},
+ title = {Introduction to the CoNLL-2000 Shared Task: Chunking},
+ url = {https://doi.org/10.3115/1117601.1117631},
+ year = {2000}
+}
+
 @inproceedings{tse-curran:2010:PAPERS,
  address = {Beijing, China},
  author = {Tse, Daniel  and  Curran, James R.},
