--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3368,6 +3368,20 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2003}
 }
 
+@inproceedings{TjongKimSang:2000:ICS:1117601.1117631,
+ acmid = {1117631},
+ author = {Tjong Kim Sang, Erik F. and Buchholz, Sabine},
+ booktitle = {Proc. of CoNLL-2000},
+ doi = {10.3115/1117601.1117631},
+ location = {Lisbon, Portugal},
+ numpages = {6},
+ publisher = {ACL},
+ series = {ConLL '00},
+ title = {Introduction to the CoNLL-2000 Shared Task: Chunking},
+ url = {https://doi.org/10.3115/1117601.1117631},
+ year = {2000}
+}
+
 @inproceedings{Toutanova:2003:FPT:1073445.1073478,
  acmid = {1073478},
  author = {Toutanova, Kristina and Klein, Dan and Manning, Christopher D. and Singer, Yoram},
