--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2860,6 +2860,14 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2017}
 }
 
+@inproceedings{sun-EtAl:2008:PAPERS,
+ author = {Sun, Xu  and  Morency, Louis-Philippe  and  Okanohara, Daisuke  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
+ booktitle = {Proc. of Coling},
+ title = {Modeling Latent-Dynamic in Shallow Parsing: A Latent Conditional Model with Imrpoved Inference},
+ url = {http://www.aclweb.org/anthology/C08-1106},
+ year = {2008}
+}
+
 @inproceedings{sun-EtAl:2009:NAACLHLT09,
  author = {Sun, Xu  and  Zhang, Yaozhong  and  Matsuzaki, Takuya  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
  booktitle = {Proc. of NAACL},
