--- a/db.bib
+++ b/db.bib
@@ -3679,6 +3679,18 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2000}
 }
 
+@inproceedings{sun-EtAl:2008:PAPERS,
+ address = {Manchester, UK},
+ author = {Sun, Xu  and  Morency, Louis-Philippe  and  Okanohara, Daisuke  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
+ booktitle = {Proceedings of the 22nd International Conference on Computational Linguistics (Coling 2008)},
+ month = {August},
+ pages = {841--848},
+ publisher = {Coling 2008 Organizing Committee},
+ title = {Modeling Latent-Dynamic in Shallow Parsing: A Latent Conditional Model with Imrpoved Inference},
+ url = {http://www.aclweb.org/anthology/C08-1106},
+ year = {2008}
+}
+
 @inproceedings{sun-EtAl:2009:NAACLHLT09,
  address = {Boulder, Colorado},
  author = {Sun, Xu  and  Zhang, Yaozhong  and  Matsuzaki, Takuya  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
