--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3215,6 +3215,15 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2000}
 }
 
+@inproceedings{sun-EtAl:2008:PAPERS,
+ author = {Sun, Xu  and  Morency, Louis-Philippe  and  Okanohara, Daisuke  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
+ booktitle = {Proc. of Coling 2008},
+ publisher = {Coling 2008 Organizing Committee},
+ title = {Modeling Latent-Dynamic in Shallow Parsing: A Latent Conditional Model with Imrpoved Inference},
+ url = {http://www.aclweb.org/anthology/C08-1106},
+ year = {2008}
+}
+
 @inproceedings{sun-EtAl:2009:NAACLHLT09,
  author = {Sun, Xu  and  Zhang, Yaozhong  and  Matsuzaki, Takuya  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
  booktitle = {Proc. of NAACL-2009},
