--- a/db.bib
+++ b/db.bib
@@ -3778,6 +3778,28 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2014}
 }
 
+@article{TACL586,
+ abstract = {Lexical embeddings can serve as useful representations for
+words for a variety of NLP tasks, but learning embeddings for phrases can be
+challenging. While separate embeddings are learned for each word, this is
+infeasible for every phrase. We construct phrase embeddings by learning how
+to compose word embeddings using features that capture phrase structure and
+context. We propose efficient unsupervised and task-specific learning
+objectives that scale our model to large datasets. We demonstrate
+improvements on both language modeling and several phrase semantic
+similarity tasks with various phrase lengths. We make the implementation of
+our model and the datasets available for general use.},
+ author = {Mo Yu and Mark Dredze},
+ issn = {2307-387X},
+ journal = {Transactions of the Association for Computational Linguistics},
+ keywords = {},
+ pages = {227--242},
+ title = {Learning Composition Models for Phrase Embeddings},
+ url = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/586},
+ volume = {3},
+ year = {2015}
+}
+
 @article{TACL68,
  abstract = {This paper proposes a discriminative forest reranking algorithm for dependency parsing that can be seen as a form of efficient stacked parsing. A dynamic programming shift-reduce parser produces a packed derivation forest which is then scored by a discriminative reranker, using the 1-best tree output by the shift-reduce parser as guide features in addition to third-order graph-based features. To improve efficiency and accuracy, this paper also proposes a novel shift-reduce parser that eliminates the spurious ambiguity of arc-standard transition systems. Testing on the English Penn Treebank data, forest reranking gave a state-of-the-art unlabeled dependency accuracy of 93.12.},
  author = {Katsuhiko Hayashi and Shuhei Kondo and Yuji Matsumoto},
