--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2946,6 +2946,28 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2014}
 }
 
+@article{TACL586,
+ abstract = {Lexical embeddings can serve as useful representations for
+words for a variety of NLP tasks, but learning embeddings for phrases can be
+challenging. While separate embeddings are learned for each word, this is
+infeasible for every phrase. We construct phrase embeddings by learning how
+to compose word embeddings using features that capture phrase structure and
+context. We propose efficient unsupervised and task-specific learning
+objectives that scale our model to large datasets. We demonstrate
+improvements on both language modeling and several phrase semantic
+similarity tasks with various phrase lengths. We make the implementation of
+our model and the datasets available for general use.},
+ author = {Mo Yu and Mark Dredze},
+ issn = {2307-387X},
+ journal = {Transactions of the Association for Computational Linguistics},
+ keywords = {},
+ pages = {227--242},
+ title = {Learning Composition Models for Phrase Embeddings},
+ url = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/586},
+ volume = {3},
+ year = {2015}
+}
+
 @article{TACL659,
  abstract = {Transition-based approaches based on local classification are attractive for dependency parsing due to their simplicity and speed, despite producing results slightly below the state-of-the-art. In this paper, we propose a new approach for approximate structured inference for transition-based parsing that produces scores suitable for global scoring using local models. This is accomplished with the introduction of error states in local training, which add information about incorrect derivation paths typically left out completely in locally-trained models. Using neural networks for our local classifiers, our approach produces the highest accuracy for transition-based dependency parsing in English.},
  author = {Vaswani, Ashish  and Sagae, Kenji},
