--- a/db.bib
+++ b/db.bib
@@ -1593,6 +1593,22 @@ graphs.},
  year = {2011}
 }
 
+@inproceedings{Gal:2016:TGA:3157096.3157211,
+ acmid = {3157211},
+ address = {USA},
+ author = {Gal, Yarin and Ghahramani, Zoubin},
+ booktitle = {Proceedings of the 30th International Conference on Neural Information Processing Systems},
+ isbn = {978-1-5108-3881-9},
+ location = {Barcelona, Spain},
+ numpages = {9},
+ pages = {1027--1035},
+ publisher = {Curran Associates Inc.},
+ series = {NIPS'16},
+ title = {A Theoretically Grounded Application of Dropout in Recurrent Neural Networks},
+ url = {http://dl.acm.org/citation.cfm?id=3157096.3157211},
+ year = {2016}
+}
+
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
  address = {Beijing, China},
  author = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
