--- a/shortdb.bib
+++ b/shortdb.bib
@@ -510,6 +510,16 @@ place on the official test sets.},
  year = {2017}
 }
 
+@inproceedings{che-EtAl:2018:K18-2,
+ abstract = {This paper describes our system (HIT-SCIR) submitted to the CoNLL 2018 shared task on Multilingual Parsing from Raw Text to Universal Dependencies. We base our submission on Stanford's winning system for the CoNLL 2017 shared task and make two effective extensions: 1) incorporating deep contextualized word embeddings into both the part of speech tagger and parser; 2) ensembling parsers trained with different initialization. We also explore different ways of concatenating treebanks for further improvements. Experimental results on the development data show the effectiveness of our methods. In the final evaluation, our system was ranked first according to LAS (75.84%) and outperformed the other systems by a large margin.},
+ author = {Che, Wanxiang  and  Liu, Yijia  and  Wang, Yuxuan  and  Zheng, Bo  and  Liu, Ting},
+ booktitle = {Proc. of the {CoNLL} 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ publisher = {ACL},
+ title = {Towards Better {UD} Parsing: Deep Contextualized Word Embeddings, Ensemble, and Treebank Concatenation},
+ url = {http://www.aclweb.org/anthology/K18-2005},
+ year = {2018}
+}
+
 @inproceedings{chen-EtAl:2009:EMNLP,
  author = {Chen, Wenliang  and  Kazama, Jun'ichi  and  Uchimoto, Kiyotaka  and  Torisawa, Kentaro},
  booktitle = {Proc. of EMNLP-2009},
