--- a/db.bib
+++ b/db.bib
@@ -4314,6 +4314,19 @@ of the art on various datasets.},
  year = {2012}
 }
 
+@inproceedings{yang-zhang:2018:Demos,
+ abstract = {This paper describes NCRF++, a toolkit for neural sequence labeling. NCRF++ is designed for quick implementation of different neural sequence labeling models with a CRF inference layer. It provides users with an inference for building the custom model structure through configuration file with flexible neural feature design and utilization. Built on PyTorch\footnote{\url{http://pytorch.org/}}, the core operations are calculated in batch, making the toolkit efficient with the acceleration of GPU. It also includes the implementations of most state-of-the-art neural sequence labeling models such as LSTM-CRF, facilitating reproducing and refinement on those methods.},
+ address = {Melbourne, Australia},
+ author = {Yang, Jie  and  Zhang, Yue},
+ booktitle = {Proceedings of ACL 2018, System Demonstrations},
+ month = {July},
+ pages = {74--79},
+ publisher = {Association for Computational Linguistics},
+ title = {NCRF++: An Open-source Neural Sequence Labeling Toolkit},
+ url = {http://www.aclweb.org/anthology/P18-4013},
+ year = {2018}
+}
+
 @inproceedings{yijia-EtAl:2012:CLP2012,
  address = {Tianjin, China},
  author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
