--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3346,6 +3346,15 @@ and Dayan, Peter},
  year = {2012}
 }
 
+@inproceedings{yang-zhang:2018:Demos,
+ abstract = {This paper describes NCRF++, a toolkit for neural sequence labeling. NCRF++ is designed for quick implementation of different neural sequence labeling models with a CRF inference layer. It provides users with an inference for building the custom model structure through configuration file with flexible neural feature design and utilization. Built on PyTorch\footnote{\url{http://pytorch.org/}}, the core operations are calculated in batch, making the toolkit efficient with the acceleration of GPU. It also includes the implementations of most state-of-the-art neural sequence labeling models such as LSTM-CRF, facilitating reproducing and refinement on those methods.},
+ author = {Yang, Jie  and  Zhang, Yue},
+ booktitle = {Proc. of ACL 2018, System Demonstrations},
+ title = {NCRF++: An Open-source Neural Sequence Labeling Toolkit},
+ url = {http://www.aclweb.org/anthology/P18-4013},
+ year = {2018}
+}
+
 @inproceedings{yijia-EtAl:2012:CLP2012,
  author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
  booktitle = {Proc. of CIPS-SIGHAN},
