--- a/db.bib
+++ b/db.bib
@@ -3631,6 +3631,18 @@ attachment score reported (to our knowledge) on the Chinese Treebank and the
  year = {2013}
 }
 
+@inproceedings{sogaard-goldberg:2016:P16-2,
+ address = {Berlin, Germany},
+ author = {S{\o}gaard, Anders  and  Goldberg, Yoav},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+ month = {August},
+ pages = {231--235},
+ publisher = {Association for Computational Linguistics},
+ title = {Deep multi-task learning with low level tasks supervised at lower layers},
+ url = {http://anthology.aclweb.org/P16-2038},
+ year = {2016}
+}
+
 @inproceedings{song-EtAl:2012:POSTERS,
  address = {Mumbai, India},
  author = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
