--- a/shortdb.bib
+++ b/shortdb.bib
@@ -3172,6 +3172,15 @@ attachment score reported (to our knowledge) on the Chinese Treebank and the
  year = {2013}
 }
 
+@inproceedings{sogaard-goldberg:2016:P16-2,
+ author = {S{\o}gaard, Anders  and  Goldberg, Yoav},
+ booktitle = {Proc. of ACL-2016},
+ publisher = {ACL},
+ title = {Deep multi-task learning with low level tasks supervised at lower layers},
+ url = {http://anthology.aclweb.org/P16-2038},
+ year = {2016}
+}
+
 @inproceedings{song-EtAl:2012:POSTERS,
  author = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
  booktitle = {Proc. of COLING 2012: Posters},
