--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1468,6 +1468,27 @@ target parsing models.},
  year = {2006}
 }
 
+@inproceedings{hashimoto-EtAl:2017:EMNLP2017,
+ abstract = {Transfer and multi-task learning have traditionally focused on either a single
+source-target pair or very few, similar tasks.
+Ideally, the linguistic levels of morphology, syntax and semantics would
+benefit each other by being trained in a single model.
+We introduce a joint many-task model together with a strategy for successively
+growing its depth to solve increasingly complex tasks.
+Higher layers include shortcut connections to lower-level task predictions to
+reflect linguistic hierarchies.
+We use a simple regularization term to allow for optimizing all model weights
+to improve one task's loss without exhibiting catastrophic interference of the
+other tasks.
+Our single end-to-end model obtains state-of-the-art or competitive results on
+five different tasks from tagging, parsing, relatedness, and entailment tasks.},
+ author = {Hashimoto, Kazuma  and  xiong, caiming  and  Tsuruoka, Yoshimasa  and  Socher, Richard},
+ booktitle = {Proc. of EMNLP},
+ title = {A Joint Many-Task Model: Growing a Neural Network for Multiple NLP Tasks},
+ url = {https://www.aclweb.org/anthology/D17-1206},
+ year = {2017}
+}
+
 @inproceedings{hatori-EtAl:2011:IJCNLP-2011,
  author = {Hatori, Jun  and  Matsuzaki, Takuya  and  Miyao, Yusuke  and  Tsujii, Jun'ichi},
  booktitle = {Proc. of IJCNLP},
