--- a/tinydb.bib
+++ b/tinydb.bib
@@ -3375,6 +3375,23 @@ and Dayan, Peter},
  year = {2012}
 }
 
+@inproceedings{yang-zhang-dong:2017:Long,
+ abstract = {Neural word segmentation research has benefited from large-scale raw texts by
+leveraging them for pretraining character and word embeddings. On the other
+hand, statistical segmentation research has exploited richer sources of
+external information, such as punctuation, automatic segmentation and POS. We
+investigate the effectiveness of a range of external training sources for
+neural word segmentation by building a modular segmentation model, pretraining
+the most important submodule using rich external sources. Results show that
+such pretraining significantly improves the model, leading to accuracies
+competitive to the best methods on six benchmarks.},
+ author = {Yang, Jie  and  Zhang, Yue  and  Dong, Fei},
+ booktitle = {Proc. of ACL},
+ title = {Neural Word Segmentation with Rich Pretraining},
+ url = {http://aclweb.org/anthology/P17-1078},
+ year = {2017}
+}
+
 @inproceedings{yang-zhang:2018:Demos,
  abstract = {This paper describes NCRF++, a toolkit for neural sequence labeling. NCRF++ is designed for quick implementation of different neural sequence labeling models with a CRF inference layer. It provides users with an inference for building the custom model structure through configuration file with flexible neural feature design and utilization. Built on PyTorch\footnote{\url{http://pytorch.org/}}, the core operations are calculated in batch, making the toolkit efficient with the acceleration of GPU. It also includes the implementations of most state-of-the-art neural sequence labeling models such as LSTM-CRF, facilitating reproducing and refinement on those methods.},
  author = {Yang, Jie  and  Zhang, Yue},
