--- a/db.bib
+++ b/db.bib
@@ -4385,6 +4385,19 @@ competitive to the best methods on six benchmarks.},
  year = {2018}
 }
 
+@inproceedings{ye-ling:2018:Short,
+ abstract = {This paper proposes hybrid semi-Markov conditional random fields (SCRFs) for neural sequence labeling in natural language processing. Based on conventional conditional random fields (CRFs), SCRFs have been designed for the tasks of assigning labels to segments by extracting features from and describing transitions between segments instead of words. In this paper, we improve the existing SCRF methods by employing word-level and segment-level information simultaneously. First, word-level labels are utilized to derive the segment scores in SCRFs. Second, a CRF output layer and an SCRF output layer are integrated into a unified neural network and trained jointly. Experimental results on CoNLL 2003 named entity recognition (NER) shared task show that our model achieves state-of-the-art performance when no external knowledge is used.},
+ address = {Melbourne, Australia},
+ author = {Ye, Zhixiu  and  Ling, Zhen-Hua},
+ booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+ month = {July},
+ pages = {235--240},
+ publisher = {Association for Computational Linguistics},
+ title = {Hybrid semi-Markov CRF for Neural Sequence Labeling},
+ url = {http://www.aclweb.org/anthology/P18-2038},
+ year = {2018}
+}
+
 @inproceedings{yijia-EtAl:2012:CLP2012,
  address = {Tianjin, China},
  author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
