--- a/shortdb.bib
+++ b/shortdb.bib
@@ -922,6 +922,23 @@ Wen{-}tau Yih},
  year = {2018}
 }
 
+@article{DBLP:journals/corr/abs-1809-08370,
+ archiveprefix = {arXiv},
+ author = {Kevin Clark and
+Minh{-}Thang Luong and
+Christopher D. Manning and
+Quoc V. Le},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1809-08370},
+ eprint = {1809.08370},
+ journal = {CoRR},
+ timestamp = {Fri, 05 Oct 2018 11:34:52 +0200},
+ title = {Semi-Supervised Sequence Modeling with Cross-View Training},
+ url = {http://arxiv.org/abs/1809.08370},
+ volume = {abs/1809.08370},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/abs-1810-04805,
  archiveprefix = {arXiv},
  author = {Jacob Devlin and
