--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1950,6 +1950,13 @@ of graph-to-sequence conversions.},
  year = {2012}
 }
 
+@inproceedings{Liu2018EmpowerSL,
+ author = {Liyuan Liu and Jingbo Shang and Xiang Ren and M. Ghoddusi Johari and Huan Gui and Jian Peng and Jiawei Han},
+ booktitle = {AAAI},
+ title = {Empower Sequence Labeling with Task-Aware Neural Language Model},
+ year = {2018}
+}
+
 @article{Liu:1989:LMB:81100.83726,
  acmid = {83726},
  author = {Liu, D. C. and Nocedal, J.},
