--- a/shortdb.bib
+++ b/shortdb.bib
@@ -410,6 +410,23 @@ and Liu, Ting},
  year = {2016}
 }
 
+@inproceedings{cai-EtAl:2017:Short,
+ abstract = {Neural models with minimal feature engineering have achieved competitive
+performance against traditional methods for the task of Chinese word
+segmentation. However, both training and working procedures of the current
+neural models are computationally inefficient. In this paper, we propose a
+greedy neural word segmenter with balanced word and character embedding inputs
+to alleviate the existing drawbacks. Our segmenter is truly end-to-end, capable
+of performing segmentation much faster and even more accurate than
+state-of-the-art neural models on Chinese benchmark datasets.},
+ author = {Cai, Deng  and  Zhao, Hai  and  Zhang, Zhisong  and  Xin, Yuan  and  Wu, Yongjian  and  Huang, Feiyue},
+ booktitle = {Proc. of ACL-2017},
+ publisher = {ACL},
+ title = {Fast and Accurate Neural Word Segmentation for Chinese},
+ url = {http://aclweb.org/anthology/P17-2096},
+ year = {2017}
+}
+
 @inproceedings{cai-knight:2013:Short,
  author = {Cai, Shu  and  Knight, Kevin},
  booktitle = {Proc. of ACL-2013},
