--- a/db.bib
+++ b/db.bib
@@ -517,6 +517,18 @@ state-of-the-art neural models on Chinese benchmark datasets.},
  year = {2013}
 }
 
+@inproceedings{cai-zhao:2016:P16-1,
+ address = {Berlin, Germany},
+ author = {Cai, Deng  and  Zhao, Hai},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {August},
+ pages = {409--420},
+ publisher = {Association for Computational Linguistics},
+ title = {Neural Word Segmentation Learning for Chinese},
+ url = {http://www.aclweb.org/anthology/P16-1039},
+ year = {2016}
+}
+
 @incollection{Candela:2006,
  author = {Dagan, Ido and Glickman, Oren and Magnini, Bernardo},
  booktitle = {Machine Learning Challenges. Evaluating Predictive Uncertainty, Visual Object Classification, and Recognising Tectual Entailment},
