--- a/shortdb.bib
+++ b/shortdb.bib
@@ -445,6 +445,15 @@ state-of-the-art neural models on Chinese benchmark datasets.},
  year = {2013}
 }
 
+@inproceedings{cai-zhao:2016:P16-1,
+ author = {Cai, Deng  and  Zhao, Hai},
+ booktitle = {Proc. of ACL-2016},
+ publisher = {ACL},
+ title = {Neural Word Segmentation Learning for Chinese},
+ url = {http://www.aclweb.org/anthology/P16-1039},
+ year = {2016}
+}
+
 @incollection{Candela:2006,
  author = {Dagan, Ido and Glickman, Oren and Magnini, Bernardo},
  booktitle = {Machine Learning Challenges. Evaluating Predictive Uncertainty, Visual Object Classification, and Recognising Tectual Entailment},
