--- a/tinydb.bib
+++ b/tinydb.bib
@@ -366,6 +366,14 @@ state-of-the-art neural models on Chinese benchmark datasets.},
  year = {2013}
 }
 
+@inproceedings{cai-zhao:2016:P16-1,
+ author = {Cai, Deng  and  Zhao, Hai},
+ booktitle = {Proc. of ACL},
+ title = {Neural Word Segmentation Learning for Chinese},
+ url = {http://www.aclweb.org/anthology/P16-1039},
+ year = {2016}
+}
+
 @inproceedings{Cao:2007:LRP:1273496.1273513,
  acmid = {1273513},
  author = {Cao, Zhe and Qin, Tao and Liu, Tie-Yan and Tsai, Ming-Feng and Li, Hang},
