--- a/db.bib
+++ b/db.bib
@@ -647,6 +647,18 @@ place on the official test sets.},
  year = {2009}
 }
 
+@inproceedings{chen-EtAl:2015:EMNLP2,
+ address = {Lisbon, Portugal},
+ author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Liu, Pengfei  and  Huang, Xuanjing},
+ booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+ month = {September},
+ pages = {1197--1206},
+ publisher = {Association for Computational Linguistics},
+ title = {Long Short-Term Memory Neural Networks for Chinese Word Segmentation},
+ url = {http://aclweb.org/anthology/D15-1141},
+ year = {2015}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  address = {Doha, Qatar},
  author = {Chen, Danqi  and  Manning, Christopher},
