--- a/shortdb.bib
+++ b/shortdb.bib
@@ -555,6 +555,15 @@ place on the official test sets.},
  year = {2009}
 }
 
+@inproceedings{chen-EtAl:2015:EMNLP2,
+ author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Liu, Pengfei  and  Huang, Xuanjing},
+ booktitle = {Proc. of EMNLP-2015},
+ publisher = {ACL},
+ title = {Long Short-Term Memory Neural Networks for Chinese Word Segmentation},
+ url = {http://aclweb.org/anthology/D15-1141},
+ year = {2015}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  author = {Chen, Danqi  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP-2014},
