--- a/tinydb.bib
+++ b/tinydb.bib
@@ -446,6 +446,23 @@ place on the official test sets.},
  year = {2015}
 }
 
+@inproceedings{chen-EtAl:2017:Long2,
+ abstract = {Different linguistic perspectives causes many diverse segmentation criteria for
+Chinese word segmentation (CWS). Most existing methods focus on improve the
+performance for each single criterion. However, it is interesting to exploit
+these different criteria and mining their common underlying knowledge. In this
+paper, we propose adversarial multi-criteria learning for CWS by integrating
+shared knowledge from multiple heterogeneous segmentation criteria. 
+Experiments on eight corpora with heterogeneous segmentation criteria show that
+the performance of each corpus obtains a significant improvement, compared to
+single-criterion learning. Source codes of this paper are available on Github.},
+ author = {Chen, Xinchi  and  Shi, Zhan  and  Qiu, Xipeng  and  Huang, Xuanjing},
+ booktitle = {Proc. of ACL},
+ title = {Adversarial Multi-Criteria Learning for Chinese Word Segmentation},
+ url = {http://aclweb.org/anthology/P17-1110},
+ year = {2017}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  author = {Chen, Danqi  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP},
