--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2033,6 +2033,25 @@ of graph-to-sequence conversions.},
  year = {2016}
 }
 
+@inproceedings{kurita-kawahara-kurohashi:2017:Long,
+ abstract = {We present neural network-based joint models for Chinese word segmentation, POS
+tagging and dependency parsing. Our models are the first neural approaches for
+fully joint Chinese analysis that is known to prevent the error propagation
+problem of pipeline models. Although word embeddings play a key role in
+dependency parsing, they cannot be applied directly to the joint task in the
+previous work. To address this problem, we propose embeddings of character
+strings, in addition to words. Experiments show that our models outperform
+existing systems in Chinese word segmentation and POS tagging, and perform
+preferable accuracies in dependency parsing. We also explore bi-LSTM models
+with fewer features.},
+ author = {Kurita, Shuhei  and  Kawahara, Daisuke  and  Kurohashi, Sadao},
+ booktitle = {Proc. of ACL-2017},
+ publisher = {ACL},
+ title = {Neural Joint Model for Transition-based Chinese Syntactic Analysis},
+ url = {http://aclweb.org/anthology/P17-1111},
+ year = {2017}
+}
+
 @inproceedings{kwiatkowksi-EtAl:2010:EMNLP,
  author = {Kwiatkowksi, Tom  and  Zettlemoyer, Luke  and  Goldwater, Sharon  and  Steedman, Mark},
  booktitle = {Proc. of EMNLP-2010},
