--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1836,6 +1836,24 @@ of graph-to-sequence conversions.},
  year = {2017}
 }
 
+@inproceedings{kurita-kawahara-kurohashi:2017:Long,
+ abstract = {We present neural network-based joint models for Chinese word segmentation, POS
+tagging and dependency parsing. Our models are the first neural approaches for
+fully joint Chinese analysis that is known to prevent the error propagation
+problem of pipeline models. Although word embeddings play a key role in
+dependency parsing, they cannot be applied directly to the joint task in the
+previous work. To address this problem, we propose embeddings of character
+strings, in addition to words. Experiments show that our models outperform
+existing systems in Chinese word segmentation and POS tagging, and perform
+preferable accuracies in dependency parsing. We also explore bi-LSTM models
+with fewer features.},
+ author = {Kurita, Shuhei  and  Kawahara, Daisuke  and  Kurohashi, Sadao},
+ booktitle = {Proc. of ACL},
+ title = {Neural Joint Model for Transition-based Chinese Syntactic Analysis},
+ url = {http://aclweb.org/anthology/P17-1111},
+ year = {2017}
+}
+
 @inproceedings{Lafferty:2001:CRF:645530.655813,
  acmid = {655813},
  author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
