--- a/db.bib
+++ b/db.bib
@@ -2314,6 +2314,28 @@ of graph-to-sequence conversions.},
  year = {2016}
 }
 
+@inproceedings{kurita-kawahara-kurohashi:2017:Long,
+ abstract = {We present neural network-based joint models for Chinese word segmentation, POS
+tagging and dependency parsing. Our models are the first neural approaches for
+fully joint Chinese analysis that is known to prevent the error propagation
+problem of pipeline models. Although word embeddings play a key role in
+dependency parsing, they cannot be applied directly to the joint task in the
+previous work. To address this problem, we propose embeddings of character
+strings, in addition to words. Experiments show that our models outperform
+existing systems in Chinese word segmentation and POS tagging, and perform
+preferable accuracies in dependency parsing. We also explore bi-LSTM models
+with fewer features.},
+ address = {Vancouver, Canada},
+ author = {Kurita, Shuhei  and  Kawahara, Daisuke  and  Kurohashi, Sadao},
+ booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ month = {July},
+ pages = {1204--1214},
+ publisher = {Association for Computational Linguistics},
+ title = {Neural Joint Model for Transition-based Chinese Syntactic Analysis},
+ url = {http://aclweb.org/anthology/P17-1111},
+ year = {2017}
+}
+
 @inproceedings{kwiatkowksi-EtAl:2010:EMNLP,
  address = {Cambridge, MA},
  author = {Kwiatkowksi, Tom  and  Zettlemoyer, Luke  and  Goldwater, Sharon  and  Steedman, Mark},
