--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2971,6 +2971,26 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2014}
 }
 
+@inproceedings{peters-EtAl:2017:Long,
+ abstract = {Pre-trained word embeddings learned from unlabeled text have become a stan-
+dard component of neural network archi- tectures for NLP tasks. However, in
+most cases, the recurrent network that oper- ates on word-level representations
+to pro- duce context sensitive representations is trained on relatively little
+labeled data. In this paper, we demonstrate a general semi-supervised approach
+for adding pre- trained context embeddings from bidi- rectional language models
+to NLP sys- tems and apply it to sequence labeling tasks. We evaluate our model
+on two stan- dard datasets for named entity recognition (NER) and chunking, and
+in both cases achieve state of the art results, surpassing previous systems
+that use other forms of transfer or joint learning with additional labeled data
+and task specific gazetteers.},
+ author = {Peters, Matthew  and  Ammar, Waleed  and  Bhagavatula, Chandra  and  Power, Russell},
+ booktitle = {Proc. of ACL-2017},
+ publisher = {ACL},
+ title = {Semi-supervised sequence tagging with bidirectional language models},
+ url = {http://aclweb.org/anthology/P17-1161},
+ year = {2017}
+}
+
 @inproceedings{peters-EtAl:2018:EMNLP,
  author = {Peters, Matthew  and  Neumann, Mark  and  Zettlemoyer, Luke  and  Yih, Wen-tau},
  booktitle = {Proc. of EMNLP-2018},
