--- a/db.bib
+++ b/db.bib
@@ -741,6 +741,18 @@ single-criterion learning. Source codes of this paper are available on Github.},
  year = {1957}
 }
 
+@inproceedings{clark-EtAl:2018:EMNLP,
+ address = {Brussels, Belgium},
+ author = {Clark, Kevin  and  Luong, Minh-Thang  and  Manning, Christopher D.  and  Le, Quoc},
+ booktitle = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
+ month = {October-November},
+ pages = {1914--1925},
+ publisher = {Association for Computational Linguistics},
+ title = {Semi-Supervised Sequence Modeling with Cross-View Training},
+ url = {http://www.aclweb.org/anthology/D18-1217},
+ year = {2018}
+}
+
 @inproceedings{collins-duffy:2002:ACL,
  address = {Philadelphia, Pennsylvania, USA},
  author = {Michael Collins  and  Nigel Duffy},
