--- a/shortdb.bib
+++ b/shortdb.bib
@@ -631,6 +631,15 @@ single-criterion learning. Source codes of this paper are available on Github.},
  year = {1957}
 }
 
+@inproceedings{clark-EtAl:2018:EMNLP,
+ author = {Clark, Kevin  and  Luong, Minh-Thang  and  Manning, Christopher D.  and  Le, Quoc},
+ booktitle = {Proc. of EMNLP-2018},
+ publisher = {ACL},
+ title = {Semi-Supervised Sequence Modeling with Cross-View Training},
+ url = {http://www.aclweb.org/anthology/D18-1217},
+ year = {2018}
+}
+
 @inproceedings{collins-duffy:2002:ACL,
  author = {Michael Collins  and  Nigel Duffy},
  booktitle = {Proc. of ACL-2002},
