--- a/tinydb.bib
+++ b/tinydb.bib
@@ -504,6 +504,14 @@ single-criterion learning. Source codes of this paper are available on Github.},
  year = {2015}
 }
 
+@inproceedings{clark-EtAl:2018:EMNLP,
+ author = {Clark, Kevin  and  Luong, Minh-Thang  and  Manning, Christopher D.  and  Le, Quoc},
+ booktitle = {Proc. of EMNLP},
+ title = {Semi-Supervised Sequence Modeling with Cross-View Training},
+ url = {http://www.aclweb.org/anthology/D18-1217},
+ year = {2018}
+}
+
 @inproceedings{clark-manning:2016:EMNLP2016,
  author = {Clark, Kevin  and  Manning, Christopher D.},
  booktitle = {Proc. of EMNLP},
