--- a/db.bib
+++ b/db.bib
@@ -647,6 +647,18 @@ place on the official test sets.},
  year = {2009}
 }
 
+@inproceedings{chen-EtAl:2015:ACL-IJCNLP5,
+ address = {Beijing, China},
+ author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Huang, Xuanjing},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ month = {July},
+ pages = {1744--1753},
+ publisher = {Association for Computational Linguistics},
+ title = {Gated Recursive Neural Network for Chinese Word Segmentation},
+ url = {http://www.aclweb.org/anthology/P15-1168},
+ year = {2015}
+}
+
 @inproceedings{chen-EtAl:2015:EMNLP2,
  address = {Lisbon, Portugal},
  author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Liu, Pengfei  and  Huang, Xuanjing},
