--- a/shortdb.bib
+++ b/shortdb.bib
@@ -555,6 +555,15 @@ place on the official test sets.},
  year = {2009}
 }
 
+@inproceedings{chen-EtAl:2015:ACL-IJCNLP5,
+ author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Huang, Xuanjing},
+ booktitle = {Proc. of ACL-2015},
+ publisher = {ACL},
+ title = {Gated Recursive Neural Network for Chinese Word Segmentation},
+ url = {http://www.aclweb.org/anthology/P15-1168},
+ year = {2015}
+}
+
 @inproceedings{chen-EtAl:2015:EMNLP2,
  author = {Chen, Xinchi  and  Qiu, Xipeng  and  Zhu, Chenxi  and  Liu, Pengfei  and  Huang, Xuanjing},
  booktitle = {Proc. of EMNLP-2015},
