--- a/db.bib
+++ b/db.bib
@@ -4899,6 +4899,24 @@ Beam Search},
  year = {2016}
 }
 
+@inproceedings{zhou-EtAl:2017:EMNLP2017,
+ abstract = {Neural parsers have benefited from automatically labeled data via
+dependency-context word embeddings. 
+We investigate training character embeddings on a word-based context in a
+similar way, showing that the simple method improves state-of-the-art neural
+word segmentation models significantly, beating tri-training baselines for
+leveraging auto-segmented data.},
+ address = {Copenhagen, Denmark},
+ author = {Zhou, Hao  and  Yu, Zhenting  and  Zhang, Yue  and  Huang, Shujian  and  DAI, XIN-YU  and  Chen, Jiajun},
+ booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+ month = {September},
+ pages = {760--766},
+ publisher = {Association for Computational Linguistics},
+ title = {Word-Context Character Embeddings for Chinese Word Segmentation},
+ url = {https://www.aclweb.org/anthology/D17-1079},
+ year = {2017}
+}
+
 @inproceedings{zhu-EtAl:2013:ACL20131,
  address = {Sofia, Bulgaria},
  author = {Zhu, Muhua  and  Zhang, Yue  and  Chen, Wenliang  and  Zhang, Min  and  Zhu, Jingbo},
