--- a/db.bib
+++ b/db.bib
@@ -3337,6 +3337,18 @@ and Satta, Giorgio},
  year = {2015}
 }
 
+@inproceedings{peng-dredze:2016:P16-2,
+ address = {Berlin, Germany},
+ author = {Peng, Nanyun  and  Dredze, Mark},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+ month = {August},
+ pages = {149--155},
+ publisher = {Association for Computational Linguistics},
+ title = {Improving Named Entity Recognition for Chinese Social Media with Word Segmentation Representation Learning},
+ url = {http://anthology.aclweb.org/P16-2025},
+ year = {2016}
+}
+
 @inproceedings{peng-EtAl:2017:EACLlong1,
  abstract = {Neural attention models have achieved great success in different NLP tasks.
 How- ever, they have not fulfilled their promise on the AMR parsing task due to
