--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2946,6 +2946,15 @@ and Satta, Giorgio},
  year = {2015}
 }
 
+@inproceedings{peng-dredze:2016:P16-2,
+ author = {Peng, Nanyun  and  Dredze, Mark},
+ booktitle = {Proc. of ACL-2016},
+ publisher = {ACL},
+ title = {Improving Named Entity Recognition for Chinese Social Media with Word Segmentation Representation Learning},
+ url = {http://anthology.aclweb.org/P16-2025},
+ year = {2016}
+}
+
 @inproceedings{peng-EtAl:2017:EACLlong1,
  abstract = {Neural attention models have achieved great success in different NLP tasks.
 How- ever, they have not fulfilled their promise on the AMR parsing task due to
