--- a/db.bib
+++ b/db.bib
@@ -1574,6 +1574,18 @@ An Exploration},
  year = {2016}
 }
 
+@inproceedings{ferguson-durrett-klein:2015:NAACL-HLT,
+ address = {Denver, Colorado},
+ author = {Ferguson, James  and  Durrett, Greg  and  Klein, Dan},
+ booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+ month = {May--June},
+ pages = {257--262},
+ publisher = {Association for Computational Linguistics},
+ title = {Disfluency Detection with a Semi-Markov Model and Prosodic Features},
+ url = {http://www.aclweb.org/anthology/N15-1029},
+ year = {2015}
+}
+
 @inproceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
  address = {Jeju Island, Korea},
  author = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
