--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1288,6 +1288,14 @@ An Exploration},
  year = {2016}
 }
 
+@inproceedings{ferguson-durrett-klein:2015:NAACL-HLT,
+ author = {Ferguson, James  and  Durrett, Greg  and  Klein, Dan},
+ booktitle = {Proc. of NAACL},
+ title = {Disfluency Detection with a Semi-Markov Model and Prosodic Features},
+ url = {http://www.aclweb.org/anthology/N15-1029},
+ year = {2015}
+}
+
 @inproceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
  author = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
  booktitle = {Proc. of EMNLP},
