--- a/tinydb.bib
+++ b/tinydb.bib
@@ -20,6 +20,20 @@ and Clark, Peter E.},
  year = {2009}
 }
 
+@article{6998838,
+ author = {G. Mesnil and Y. Dauphin and K. Yao and Y. Bengio and L. Deng and D. Hakkani-Tur and X. He and L. Heck and G. Tur and D. Yu and G. Zweig},
+ doi = {10.1109/TASLP.2014.2383614},
+ issn = {2329-9290},
+ journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+ keywords = {recurrent neural nets;speech recognition;recurrent neural network;spoken language understanding;semantic slot filling;Elman architecture;Jordan architecture;Theano neural network toolkit;airline travel information system;Hidden Markov models;Filling;Semantics;Vectors;Recurrent neural networks;Context;Recurrent neural network (RNN);slot filling;spoken language understanding (SLU);word embedding},
+ month = {March},
+ number = {3},
+ pages = {530-539},
+ title = {Using Recurrent Neural Networks for Slot Filling in Spoken Language Understanding},
+ volume = {23},
+ year = {2015}
+}
+
 @article{7478417,
  author = {S. Lai and K. Liu and S. He and J. Zhao},
  doi = {10.1109/MIS.2016.45},
