--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1042,6 +1042,36 @@ Understanding},
  year = {2018}
 }
 
+@article{DBLP:journals/corr/abs-1812-10860,
+ archiveprefix = {arXiv},
+ author = {Samuel R. Bowman and
+Ellie Pavlick and
+Edouard Grave and
+Benjamin Van Durme and
+Alex Wang and
+Jan Hula and
+Patrick Xia and
+Raghavendra Pappagari and
+R. Thomas McCoy and
+Roma Patel and
+Najoung Kim and
+Ian Tenney and
+Yinghui Huang and
+Katherin Yu and
+Shuning Jin and
+Berlin Chen},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1812-10860},
+ eprint = {1812.10860},
+ journal = {CoRR},
+ timestamp = {Wed, 02 Jan 2019 14:40:18 +0100},
+ title = {Looking for ELMo's friends: Sentence-Level Pretraining Beyond Language
+Modeling},
+ url = {http://arxiv.org/abs/1812.10860},
+ volume = {abs/1812.10860},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/BahdanauCB14,
  archiveprefix = {arXiv},
  author = {Dzmitry Bahdanau and
